--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <div class="bloc bgc-black d-bloc none" id="bloc-3">
             <div class="container bloc-md">
-                <div class="row animated fadeIn animSpeedLazy" data-appear-anim-style="fadeIn">
+                <div>
                     <div class="offset-sm-2 col-6 col-sm-4 col-md-2 offset-md-4">
                         <div class="text-center"><a href="https://www.instagram.com/michaeldellone/"
                                 target="_blank"><span
