--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 class="fa fa-chevron-up"></span></a>
         <div class="bloc l-bloc" id="bloc-1">
             <div class="container bloc-lg">
-                <div class="row animated fadeIn" data-appear-anim-style="fadeIn">
+                <div>
                     <div class="col-md-4 scroll-fx-left-in">
                         <div class="text-center"><span
                                 class="fa fa-child icon-round icon-md animated pulse-hvr threeD-t"></span></div>
