--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?6819">
-    <link rel="stylesheet" type="text/css" href="style.css?2832">
-    <link rel="stylesheet" type="text/css" href="./css/animate.min.css?648">
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?8109">
+    <link rel="stylesheet" type="text/css" href="style.css?3292">
+    <link rel="stylesheet" type="text/css" href="./css/animate.min.css?2077">
     <link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="./css/ionicons.min.css">
     <link href='https://fonts.googleapis.com/css?family=Pacifico&amp;subset=latin,latin-ext' rel='stylesheet'
         type='text/css'>
-    <script src="./js/jquery-3.3.1.min.js?1329"></script>
-    <script src="./js/bootstrap.bundle.min.js?6455"></script>
-    <script src="./js/blocs.min.js?9762"></script>
+    <script src="./js/jquery-3.3.1.min.js?6092"></script>
+    <script src="./js/bootstrap.bundle.min.js?2215"></script>
+    <script src="./js/blocs.min.js?3595"></script>
     <script src="./js/lazysizes.min.js" defer></script>
     <script src="./js/tilt.jquery.js"></script>
     <script src="./js/waves.js"></script>
     <script src="./js/particles.min.js"></script>
     <script src="./js/jquery.scrollify.js"></script>
-    <title>Home</title>
+    <title>Home</title> 
 </head>
 
 <body>
     <div class="page-container">
-        <div class="bloc bloc-fill-screen bg-IMG-0525 bgc-melon l-bloc animated fadeIn none d-flex bloc-bg-texture texture-darken animSpeedLazy "
+        <div class="bloc bloc-fill-screen bg-IMG-0525 bgc-melon l-bloc animated fadeIn none d-flex bloc-bg-texture texture-darken animSpeedLazy"
             id="bloc-0" data-appear-anim-style="fadeIn">
             <div class="container fill-bloc-top-edge">
                 <div class="row">
@@ -56,12 +56,11 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><span
+        </div><a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><span
                 class="fa fa-chevron-up"></span></a>
-        <div class="bloc l-bloc" id="bloc-1">
+        <div class="bloc l-bloc none " id="bloc-1">
             <div class="container bloc-lg">
-                <div>
+                <div class="row">
                     <div class="col-md-4 scroll-fx-left-in">
                         <div class="text-center"><span
                                 class="fa fa-child icon-round icon-md animated pulse-hvr threeD-t"></span></div>
@@ -100,7 +99,7 @@
         </div>
         <div class="bloc bgc-black d-bloc none" id="bloc-3">
             <div class="container bloc-md">
-                <div>
+                <div class="row none">
                     <div class="offset-sm-2 col-6 col-sm-4 col-md-2 offset-md-4">
                         <div class="text-center"><a href="https://www.instagram.com/michaeldellone/"
                                 target="_blank"><span
@@ -116,7 +115,7 @@
                 </div>
             </div>
         </div>
-    <script src="./js/scrollFX.js?2546"></script>
+    <script src="./js/scrollFX.js?2196"></script>
     <div id="page-loading-blocs-notifaction" class="page-preloader"></div>
 </body>
 
