--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
     <link rel="icon" type="image/png" href="/favicon.png"/>
 </head>
-
+<style>canvas{width: 100%;}</style>
 <body id="page-top">
     <nav class="navbar navbar-light navbar-expand-md d-print-none navbar navbar-expand-lg fixed-top" id="mainNav" style="background: #0000006c;">
         <div class="container"><button data-toggle="collapse" class="navbar-toggler navbar-toggler-right" data-target="#navbarResponsive" type="button" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" value="Menu"><i class="fa fa-bars"></i></button>
